[gd_scene load_steps=4 format=3 uid="uid://cfhgf64abji5j"]

[ext_resource type="Script" path="res://code/particle.gd" id="1_phaf5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xie5i"]
resource_local_to_scene = true
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oe6kv"]
resource_local_to_scene = true
radius = 24.0

[node name="Particle" type="StaticBody2D"]
script = ExtResource("1_phaf5")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xie5i")

[node name="DragArea" type="Area2D" parent="."]
collision_mask = 0
monitoring = false
monitorable = false

[node name="Shape" type="CollisionShape2D" parent="DragArea"]
shape = SubResource("CircleShape2D_xie5i")

[node name="ReactionArea" type="Area2D" parent="."]
collision_layer = 0
input_pickable = false

[node name="Shape" type="CollisionShape2D" parent="ReactionArea"]
shape = SubResource("CircleShape2D_oe6kv")

[node name="Label" type="Label" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -1.5
offset_right = 0.5
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 1

[connection signal="input_event" from="DragArea" to="." method="on_area_input"]
[connection signal="mouse_entered" from="DragArea" to="." method="on_hover" binds= [true]]
[connection signal="mouse_exited" from="DragArea" to="." method="on_hover" binds= [false]]
